fix(homepage): make sure featured placeholder stays visible

--- a/style/home.css
+++ b/style/home.css
@@ -92,6 +92,7 @@
 .home-page .featured-placeholder {
   grid-area: featured;
   height: 550px;
+  display: block;
 }
 
 .home-page main .news-box {
